--- a/index.html
+++ b/index.html
@@ -124,3 +124,12 @@
     window.scrollTo(0, 0);
   });
 </script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EZHJNVSR58"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EZHJNVSR58');
+</script>
