--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<head>
+<meta name="robots" content="noindex" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+SC">
 <style>
   body {
@@ -5,6 +7,9 @@
     font-weight: 600;
     font-size: 1.7rem;
     overflow: hidden;
+  }
+  img {
+    margin: 20px 0;
   }
   #content {
     text-align: center;
@@ -45,10 +50,12 @@
     background-color: #f2f2f2;
   }
 </style>
+</head>
 <body>
   <div id="content">
     <div id="title">陳家庭 NBA日程表</div>
     <div id="date"></div>
+    <img width="500" src="./a.gif" />
     <div id="noMatches">(今天沒有籃球比賽)</div>
     <table id="todayTable">
       <thead><tr><th>時間</th><th>電台</th><th>團隊</th></tr></thead>
