--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <tbody id="matches"></tbody>
     </table>
     <div id="toggle">完整时间表</div>
-    <div style="margin:20px 0">季前赛从 10 月 3 日开始，赛季从 10 月 19 日开始</div>
+    <div style="margin:20px 0">季前赛从十月 3号开始，赛季从十月 19号开始</div>
     <table id="laterTable">
       <thead><tr><th>日期</th><th>團隊</th></tr></thead>
       <tbody id="later"></tbody>
