--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-    [{"date":"星期一, 四月 25号","opp":"波士顿凯尔特人 vs 布鲁克林篮网","time":"4:00 PM","channel":752,"sorter":40041,"ee":"April 25"},{"date":"星期一, 四月 25号","opp":"犹他爵士 vs 达拉斯獨行俠","time":"6:30 PM","channel":752,"sorter":40043,"ee":"April 25"},{"date":"星期二, 四月 26号","opp":"明尼苏达森林狼 vs 孟菲斯灰熊","time":"4:30 PM","channel":752,"sorter":40042,"ee":"April 26"},{"date":"星期二, 四月 26号","opp":"新奥尔良鹈鹕 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":40045,"ee":"April 26"},{"date":"星期三, 四月 27号","opp":"丹佛掘金 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":40046,"ee":"April 27"}]
+    [{"date":"星期四, 四月 28号","opp":"菲尼克斯太阳 vs 新奥尔良鹈鹕","time":"LIVE","channel":752,"sorter":40028,"ee":"April 28"},{"date":"星期四, 四月 28号","opp":"达拉斯獨行俠 vs 犹他爵士","time":"7:00 PM","channel":752,"sorter":40047,"ee":"April 28"},{"date":"星期五, 四月 29号","opp":"孟菲斯灰熊 vs 明尼苏达森林狼","time":"6:00 PM","channel":735,"sorter":40047,"ee":"April 29"},{"date":"星期日, 五月 1号","opp":"密尔沃基雄鹿 vs 波士顿凯尔特人","time":"10:00 AM","channel":707,"sorter":50011,"ee":"May 1"},{"date":"星期日, 五月 1号","opp":"明尼苏达森林狼 vs 孟菲斯灰熊","time":"12:30 PM","channel":707,"sorter":50025,"ee":"May 1"}]
   `);
 
   var dupe = {};
