--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-    [{"date":"星期日, 五月 8号","opp":"迈阿密热火 vs 费城76人","time":"LIVE","channel":752,"sorter":50008,"ee":"May 8"},{"date":"星期一, 五月 9号","opp":"波士顿凯尔特人 vs 密尔沃基雄鹿","time":"4:30 PM","channel":752,"sorter":50025,"ee":"May 9"},{"date":"星期一, 五月 9号","opp":"孟菲斯灰熊 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":50028,"ee":"May 9"},{"date":"星期二, 五月 10号","opp":"费城76人 vs 迈阿密热火","time":"4:30 PM","channel":752,"sorter":50026,"ee":"May 10"},{"date":"星期二, 五月 10号","opp":"达拉斯獨行俠 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":50029,"ee":"May 10"},{"date":"星期三, 五月 11号","opp":"密尔沃基雄鹿 vs 波士顿凯尔特人","time":"4:00 PM","channel":752,"sorter":50027,"ee":"May 11"},{"date":"星期三, 五月 11号","opp":"金州勇士 vs 孟菲斯灰熊","time":"6:30 PM","channel":752,"sorter":50029,"ee":"May 11"},{"date":"星期四, 五月 12号","opp":"迈阿密热火 vs 费城76人","time":"TBD","channel":735,"sorter":50012,"ee":"May 12"},{"date":"星期四, 五月 12号","opp":"菲尼克斯太阳 vs 达拉斯獨行俠","time":"TBD","channel":735,"sorter":50012,"ee":"May 12"},{"date":"星期五, 五月 13号","opp":"波士顿凯尔特人 vs 密尔沃基雄鹿","time":"TBD","channel":735,"sorter":50013,"ee":"May 13"},{"date":"星期五, 五月 13号","opp":"孟菲斯灰熊 vs 金州勇士","time":"TBD","channel":735,"sorter":50013,"ee":"May 13"}]
+    [{"date":"星期日, 五月 15号","opp":"密尔沃基雄鹿 vs 波士顿凯尔特人","time":"12:30 PM","channel":707,"sorter":50039,"ee":"May 15"},{"date":"星期日, 五月 15号","opp":"达拉斯獨行俠 vs 菲尼克斯太阳","time":"5:00 PM","channel":752,"sorter":50032,"ee":"May 15"}]
   `);
 
   var dupe = {};
