--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
   #card {
     margin-bottom: 31px;
   }
+  #cup {
+    color: blue;
+    cursor: pointer;
+    display: inline-block;
+  }
+  #cupTable {
+    display:  none;
+  }
 </style>
 </head>
 <body>
@@ -75,12 +83,121 @@
       <thead><tr><th>日期</th><th>團隊</th></tr></thead>
       <tbody id="later"></tbody>
     </table>
+
+    <div><div id="cup" style="font-size: 2.5rem; margin: 12px 0">世界杯日程表</div></div>
+    <table id="cupTable">
+      <thead><tr><th>日期</th><th>時間</th><th>電台</th><th>團隊</th></tr></thead>
+      <tbody id="worldcup"></tbody>
+    </table>
   </div>
 </body>
 <script>
   var a = JSON.parse(`
     [{"date":"星期二, 十月 18号","opp":"费城76人 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":634,"ee":"October 18"},{"date":"星期二, 十月 18号","opp":"洛杉矶湖人 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":637,"ee":"October 18"},{"date":"星期三, 十月 19号","opp":"纽约尼克斯 vs 孟菲斯灰熊","time":"4:30 PM","channel":735,"sorter":635,"ee":"October 19"},{"date":"星期三, 十月 19号","opp":"达拉斯獨行俠 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":638,"ee":"October 19"},{"date":"星期四, 十月 20号","opp":"密尔沃基雄鹿 vs 费城76人","time":"4:30 PM","channel":752,"sorter":636,"ee":"October 20"},{"date":"星期四, 十月 20号","opp":"洛杉矶快船 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":639,"ee":"October 20"},{"date":"星期五, 十月 21号","opp":"波士顿凯尔特人 vs 迈阿密热火","time":"4:30 PM","channel":735,"sorter":637,"ee":"October 21"},{"date":"星期五, 十月 21号","opp":"丹佛掘金 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":640,"ee":"October 21"},{"date":"星期六, 十月 22号","opp":"洛杉矶快船 vs 沙加緬度國王","time":"7:00 PM","channel":738,"sorter":641,"ee":"October 22"},{"date":"星期日, 十月 23号","opp":"波特兰开拓者 vs 洛杉矶湖人","time":"12:30 PM","channel":787,"sorter":647,"ee":"October 23"},{"date":"星期日, 十月 23号","opp":"菲尼克斯太阳 vs 洛杉矶快船","time":"7:00 PM","channel":738,"sorter":642,"ee":"October 23"},{"date":"星期二, 十月 25号","opp":"达拉斯獨行俠 vs 新奥尔良鹈鹕","time":"4:30 PM","channel":752,"sorter":641,"ee":"October 25"},{"date":"星期二, 十月 25号","opp":"洛杉矶快船 vs 俄克拉何马城雷霆","time":"5:00 PM","channel":738,"sorter":642,"ee":"October 25"},{"date":"星期二, 十月 25号","opp":"金州勇士 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":644,"ee":"October 25"},{"date":"星期三, 十月 26号","opp":"布鲁克林篮网 vs 密尔沃基雄鹿","time":"4:30 PM","channel":735,"sorter":642,"ee":"October 26"},{"date":"星期三, 十月 26号","opp":"洛杉矶湖人 vs 丹佛掘金","time":"7:00 PM","channel":735,"sorter":645,"ee":"October 26"},{"date":"星期四, 十月 27号","opp":"洛杉矶快船 vs 俄克拉何马城雷霆","time":"5:00 PM","channel":738,"sorter":644,"ee":"October 27"},{"date":"星期五, 十月 28号","opp":"印第安纳步行者 vs 华盛顿奇才","time":"4:30 PM","channel":735,"sorter":644,"ee":"October 28"},{"date":"星期五, 十月 28号","opp":"洛杉矶湖人 vs 明尼苏达森林狼","time":"5:00 PM","channel":787,"sorter":645,"ee":"October 28"},{"date":"星期五, 十月 28号","opp":"新奥尔良鹈鹕 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":647,"ee":"October 28"},{"date":"星期日, 十月 30号","opp":"新奥尔良鹈鹕 vs 洛杉矶快船","time":"12:00 PM","channel":738,"sorter":654,"ee":"October 30"},{"date":"星期日, 十月 30号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"6:30 PM","channel":787,"sorter":648,"ee":"October 30"},{"date":"星期一, 十月 31号","opp":"休斯敦火箭 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":650,"ee":"October 31"},{"date":"星期二, 十一月 1号","opp":"奧蘭多魔術 vs 俄克拉何马城雷霆","time":"4:30 PM","channel":752,"sorter":717,"ee":"November 1"},{"date":"星期二, 十一月 1号","opp":"明尼苏达森林狼 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":720,"ee":"November 1"},{"date":"星期三, 十一月 2号","opp":"夏洛特黃蜂 vs 芝加哥公牛","time":"4:30 PM","channel":735,"sorter":718,"ee":"November 2"},{"date":"星期三, 十一月 2号","opp":"洛杉矶快船 vs 休斯敦火箭","time":"5:00 PM","channel":738,"sorter":719,"ee":"November 2"},{"date":"星期三, 十一月 2号","opp":"孟菲斯灰熊 vs 波特兰开拓者","time":"7:00 PM","channel":735,"sorter":721,"ee":"November 2"},{"date":"星期三, 十一月 2号","opp":"新奥尔良鹈鹕 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":721,"ee":"November 2"},{"date":"星期五, 十一月 4号","opp":"芝加哥公牛 vs 波士顿凯尔特人","time":"4:30 PM","channel":735,"sorter":720,"ee":"November 4"},{"date":"星期五, 十一月 4号","opp":"洛杉矶快船 vs 聖安東尼奧馬刺","time":"5:00 PM","channel":738,"sorter":721,"ee":"November 4"},{"date":"星期五, 十一月 4号","opp":"密尔沃基雄鹿 vs 明尼苏达森林狼","time":"7:00 PM","channel":735,"sorter":723,"ee":"November 4"},{"date":"星期五, 十一月 4号","opp":"犹他爵士 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":723,"ee":"November 4"},{"date":"星期日, 十一月 6号","opp":"克里夫蘭騎士 vs 洛杉矶湖人","time":"12:30 PM","channel":787,"sorter":730,"ee":"November 6"},{"date":"星期日, 十一月 6号","opp":"犹他爵士 vs 洛杉矶快船","time":"7:00 PM","channel":738,"sorter":725,"ee":"November 6"},{"date":"星期一, 十一月 7号","opp":"洛杉矶湖人 vs 犹他爵士","time":"7:15 PM","channel":787,"sorter":726,"ee":"November 7"},{"date":"星期一, 十一月 7号","opp":"克里夫蘭騎士 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":726,"ee":"November 7"},{"date":"星期三, 十一月 9号","opp":"纽约尼克斯 vs 布鲁克林篮网","time":"4:30 PM","channel":735,"sorter":725,"ee":"November 9"},{"date":"星期三, 十一月 9号","opp":"洛杉矶湖人 vs 洛杉矶快船","time":"7:00 PM","channel":735,"sorter":728,"ee":"November 9"},{"date":"星期五, 十一月 11号","opp":"明尼苏达森林狼 vs 孟菲斯灰熊","time":"6:30 PM","channel":735,"sorter":729,"ee":"November 11"},{"date":"星期五, 十一月 11号","opp":"沙加緬度國王 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":730,"ee":"November 11"},{"date":"星期六, 十一月 12号","opp":"布鲁克林篮网 vs 洛杉矶快船","time":"1:00 PM","channel":738,"sorter":725,"ee":"November 12"},{"date":"星期日, 十一月 13号","opp":"布鲁克林篮网 vs 洛杉矶湖人","time":"6:30 PM","channel":787,"sorter":731,"ee":"November 13"},{"date":"星期一, 十一月 14号","opp":"洛杉矶快船 vs 休斯敦火箭","time":"5:00 PM","channel":738,"sorter":731,"ee":"November 14"},{"date":"星期二, 十一月 15号","opp":"孟菲斯灰熊 vs 新奥尔良鹈鹕","time":"4:30 PM","channel":752,"sorter":731,"ee":"November 15"},{"date":"星期二, 十一月 15号","opp":"洛杉矶快船 vs 达拉斯獨行俠","time":"5:30 PM","channel":738,"sorter":732,"ee":"November 15"},{"date":"星期二, 十一月 15号","opp":"纽约尼克斯 vs 犹他爵士","time":"7:00 PM","channel":752,"sorter":734,"ee":"November 15"},{"date":"星期三, 十一月 16号","opp":"波士顿凯尔特人 vs 亞特蘭大老鷹","time":"4:30 PM","channel":735,"sorter":732,"ee":"November 16"},{"date":"星期三, 十一月 16号","opp":"金州勇士 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":735,"ee":"November 16"},{"date":"星期四, 十一月 17号","opp":"底特律活塞 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":736,"ee":"November 17"},{"date":"星期五, 十一月 18号","opp":"密尔沃基雄鹿 vs 费城76人","time":"4:30 PM","channel":735,"sorter":734,"ee":"November 18"},{"date":"星期五, 十一月 18号","opp":"纽约尼克斯 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":737,"ee":"November 18"},{"date":"星期五, 十一月 18号","opp":"底特律活塞 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":737,"ee":"November 18"},{"date":"星期六, 十一月 19号","opp":"聖安東尼奧馬刺 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":738,"ee":"November 19"},{"date":"星期日, 十一月 20号","opp":"聖安東尼奧馬刺 vs 洛杉矶湖人","time":"6:30 PM","channel":787,"sorter":738,"ee":"November 20"},{"date":"星期一, 十一月 21号","opp":"犹他爵士 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":740,"ee":"November 21"},{"date":"星期二, 十一月 22号","opp":"布鲁克林篮网 vs 费城76人","time":"4:30 PM","channel":752,"sorter":738,"ee":"November 22"},{"date":"星期二, 十一月 22号","opp":"洛杉矶湖人 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":741,"ee":"November 22"},{"date":"星期三, 十一月 23号","opp":"达拉斯獨行俠 vs 波士顿凯尔特人","time":"4:30 PM","channel":735,"sorter":739,"ee":"November 23"},{"date":"星期三, 十一月 23号","opp":"洛杉矶快船 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":742,"ee":"November 23"},{"date":"星期五, 十一月 25号","opp":"洛杉矶湖人 vs 聖安東尼奧馬刺","time":"5:00 PM","channel":787,"sorter":742,"ee":"November 25"},{"date":"星期五, 十一月 25号","opp":"丹佛掘金 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":744,"ee":"November 25"},{"date":"星期六, 十一月 26号","opp":"洛杉矶湖人 vs 聖安東尼奧馬刺","time":"5:00 PM","channel":787,"sorter":743,"ee":"November 26"},{"date":"星期日, 十一月 27号","opp":"印第安纳步行者 vs 洛杉矶快船","time":"1:00 PM","channel":738,"sorter":740,"ee":"November 27"},{"date":"星期一, 十一月 28号","opp":"印第安纳步行者 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":747,"ee":"November 28"},{"date":"星期二, 十一月 29号","opp":"金州勇士 vs 达拉斯獨行俠","time":"4:30 PM","channel":752,"sorter":745,"ee":"November 29"},{"date":"星期二, 十一月 29号","opp":"洛杉矶快船 vs 波特兰开拓者","time":"7:00 PM","channel":752,"sorter":748,"ee":"November 29"},{"date":"星期三, 十一月 30号","opp":"洛杉矶快船 vs 犹他爵士","time":"6:00 PM","channel":738,"sorter":748,"ee":"November 30"},{"date":"星期三, 十一月 30号","opp":"波特兰开拓者 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":749,"ee":"November 30"},{"date":"星期五, 十二月 2号","opp":"洛杉矶湖人 vs 密尔沃基雄鹿","time":"4:30 PM","channel":735,"sorter":818,"ee":"December 2"},{"date":"星期五, 十二月 2号","opp":"芝加哥公牛 vs 金州勇士","time":"7:00 PM","channel":735,"sorter":821,"ee":"December 2"},{"date":"星期六, 十二月 3号","opp":"沙加緬度國王 vs 洛杉矶快船","time":"1:00 PM","channel":738,"sorter":816,"ee":"December 3"},{"date":"星期日, 十二月 4号","opp":"洛杉矶湖人 vs 华盛顿奇才","time":"3:00 PM","channel":787,"sorter":819,"ee":"December 4"},{"date":"星期一, 十二月 5号","opp":"洛杉矶快船 vs 夏洛特黃蜂","time":"4:00 PM","channel":738,"sorter":821,"ee":"December 5"},{"date":"星期二, 十二月 6号","opp":"洛杉矶湖人 vs 克里夫蘭騎士","time":"4:30 PM","channel":752,"sorter":822,"ee":"December 6"},{"date":"星期二, 十二月 6号","opp":"达拉斯獨行俠 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":825,"ee":"December 6"},{"date":"星期三, 十二月 7号","opp":"洛杉矶快船 vs 奧蘭多魔術","time":"4:00 PM","channel":738,"sorter":823,"ee":"December 7"},{"date":"星期三, 十二月 7号","opp":"亞特蘭大老鷹 vs 纽约尼克斯","time":"4:30 PM","channel":735,"sorter":823,"ee":"December 7"},{"date":"星期三, 十二月 7号","opp":"洛杉矶湖人 vs 多伦多猛龙","time":"4:30 PM","channel":787,"sorter":823,"ee":"December 7"},{"date":"星期三, 十二月 7号","opp":"波士顿凯尔特人 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":826,"ee":"December 7"},{"date":"星期四, 十二月 8号","opp":"洛杉矶快船 vs 迈阿密热火","time":"4:30 PM","channel":738,"sorter":824,"ee":"December 8"},{"date":"星期五, 十二月 9号","opp":"洛杉矶湖人 vs 费城76人","time":"4:30 PM","channel":735,"sorter":825,"ee":"December 9"},{"date":"星期五, 十二月 9号","opp":"密尔沃基雄鹿 vs 达拉斯獨行俠","time":"7:00 PM","channel":735,"sorter":828,"ee":"December 9"},{"date":"星期六, 十二月 10号","opp":"洛杉矶快船 vs 华盛顿奇才","time":"4:00 PM","channel":738,"sorter":826,"ee":"December 10"},{"date":"星期日, 十二月 11号","opp":"洛杉矶湖人 vs 底特律活塞","time":"3:00 PM","channel":787,"sorter":826,"ee":"December 11"},{"date":"星期一, 十二月 12号","opp":"波士顿凯尔特人 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":831,"ee":"December 12"},{"date":"星期二, 十二月 13号","opp":"金州勇士 vs 密尔沃基雄鹿","time":"4:30 PM","channel":752,"sorter":829,"ee":"December 13"},{"date":"星期二, 十二月 13号","opp":"波士顿凯尔特人 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":832,"ee":"December 13"},{"date":"星期三, 十二月 14号","opp":"纽约尼克斯 vs 芝加哥公牛","time":"4:30 PM","channel":735,"sorter":830,"ee":"December 14"},{"date":"星期三, 十二月 14号","opp":"明尼苏达森林狼 vs 洛杉矶快船","time":"7:00 PM","channel":735,"sorter":833,"ee":"December 14"},{"date":"星期四, 十二月 15号","opp":"菲尼克斯太阳 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":834,"ee":"December 15"},{"date":"星期五, 十二月 16号","opp":"丹佛掘金 vs 洛杉矶湖人","time":"7:00 PM","channel":787,"sorter":835,"ee":"December 16"},{"date":"星期六, 十二月 17号","opp":"华盛顿奇才 vs 洛杉矶快船","time":"1:00 PM","channel":738,"sorter":830,"ee":"December 17"},{"date":"星期日, 十二月 18号","opp":"华盛顿奇才 vs 洛杉矶湖人","time":"6:30 PM","channel":787,"sorter":836,"ee":"December 18"},{"date":"星期一, 十二月 19号","opp":"洛杉矶湖人 vs 菲尼克斯太阳","time":"6:00 PM","channel":787,"sorter":837,"ee":"December 19"},{"date":"星期二, 十二月 20号","opp":"金州勇士 vs 纽约尼克斯","time":"4:30 PM","channel":752,"sorter":836,"ee":"December 20"},{"date":"星期二, 十二月 20号","opp":"孟菲斯灰熊 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":839,"ee":"December 20"},{"date":"星期三, 十二月 21号","opp":"洛杉矶湖人 vs 沙加緬度國王","time":"7:00 PM","channel":787,"sorter":840,"ee":"December 21"},{"date":"星期三, 十二月 21号","opp":"夏洛特黃蜂 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":840,"ee":"December 21"},{"date":"星期五, 十二月 23号","opp":"洛杉矶快船 vs 费城76人","time":"4:00 PM","channel":738,"sorter":839,"ee":"December 23"},{"date":"星期五, 十二月 23号","opp":"夏洛特黃蜂 vs 洛杉矶湖人","time":"7:30 PM","channel":787,"sorter":842,"ee":"December 23"},{"date":"星期日, 十二月 25号","opp":"洛杉矶湖人 vs 达拉斯獨行俠","time":"11:30 AM","channel":787,"sorter":836,"ee":"December 25"},{"date":"星期一, 十二月 26号","opp":"洛杉矶快船 vs 底特律活塞","time":"4:00 PM","channel":738,"sorter":842,"ee":"December 26"},{"date":"星期二, 十二月 27号","opp":"洛杉矶湖人 vs 奧蘭多魔術","time":"4:00 PM","channel":787,"sorter":843,"ee":"December 27"},{"date":"星期二, 十二月 27号","opp":"洛杉矶快船 vs 多伦多猛龙","time":"4:30 PM","channel":738,"sorter":843,"ee":"December 27"},{"date":"星期三, 十二月 28号","opp":"洛杉矶湖人 vs 迈阿密热火","time":"4:30 PM","channel":787,"sorter":844,"ee":"December 28"},{"date":"星期四, 十二月 29号","opp":"洛杉矶快船 vs 波士顿凯尔特人","time":"4:30 PM","channel":738,"sorter":845,"ee":"December 29"},{"date":"星期五, 十二月 30号","opp":"洛杉矶湖人 vs 亞特蘭大老鷹","time":"4:30 PM","channel":787,"sorter":846,"ee":"December 30"},{"date":"星期六, 十二月 31号","opp":"洛杉矶快船 vs 印第安纳步行者","time":"12:00 PM","channel":738,"sorter":855,"ee":"December 31"},{"date":"星期一, 一月 22023号","opp":"洛杉矶湖人 vs 夏洛特黃蜂","time":"4:00 PM","channel":787,"sorter":32039,"ee":"January 2"},{"date":"星期一, 一月 22023号","opp":"迈阿密热火 vs 洛杉矶快船","time":"7:30 PM","channel":738,"sorter":32042,"ee":"January 2"}]
   `);
+
+  w = [
+    {"date":"星期日, 十一月 20号","opp":"卡塔尔 vs 厄瓜多尔", time:"8:00 AM","channel":711,},
+
+
+    {"date":"星期一, 十一月 21号","opp":"英格兰 vs 伊朗", time:"5:00 AM", "channel":740,},
+    {"date":"星期一, 十一月 21号","opp":"塞内加尔 vs 荷兰", time:"8:00 AM",  "channel":711,},
+    {"date":"星期一, 十一月 21号","opp":"美国 vs 威尔士", time:"11:00 AM", "channel":711,},
+
+
+    {"date":"星期二, 十一月 22号","opp":"上阿根廷 vs 阵沙特阿拉伯", time:"2:00 AM", "channel":740, },
+    {"date":"星期二, 十一月 22号","opp":"丹麦 vs 突尼斯", time:"5:00 AM", "channel":740,},
+    {"date":"星期二, 十一月 22号","opp":"墨西哥 vs 波兰", time:"8:00 AM", "channel":711,},
+    {"date":"星期二, 十一月 22号","opp":"法国 vs 澳大利亚", time:"11:00 AM", "channel":711,},
+
+
+    {"date":"星期三, 十一月 23号","opp":"摩洛哥 vs 克罗地亚", time:"2:00 AM", "channel":740, },
+    {"date":"星期三, 十一月 23号","opp":"德国 vs 日本", time:"5:00 AM", "channel":740, },
+    {"date":"星期三, 十一月 23号","opp":"西班牙 vs 哥斯达黎加", time:"8:00 AM", "channel":711, },
+    {"date":"星期三, 十一月 23号","opp":"比利时 vs 加拿大", time:"11:00 AM",  "channel":711, },
+
+
+    {"date":"星期四, 十一月 24号","opp":"瑞士 vs 喀麦隆",time:"2:00 AM", "channel":740, },
+    {"date":"星期四, 十一月 24号","opp":"乌拉圭 vs 韩国", time:"5:00 AM", "channel":740, },
+    {"date":"星期四, 十一月 24号","opp":"葡萄牙 vs 加纳", time:"8:00 AM", "channel":711, },
+    {"date":"星期四, 十一月 24号","opp":"巴西 vs 塞尔维亚", time:"11:00 AM",  "channel":711, },
+
+
+    {"date":"星期五, 十一月 25号","opp":"威尔士 vs. 伊朗",time:"2:00 AM", "channel":740, },
+    {"date":"星期五, 十一月 25号","opp":"卡塔尔 vs 塞内加尔", time:"5:00 AM", "channel":740, },
+    {"date":"星期五, 十一月 25号","opp":"荷兰 vs 厄瓜多尔", time:"8:00 AM", "channel":711, },
+    {"date":"星期五, 十一月 25号","opp":"英格兰 vs 美国", time:"11:00 AM",  "channel":711, },
+
+
+    {"date":"星期六, 十一月 26号","opp":"突尼斯 vs 澳大利亚",time:"2:00 AM", "channel":740, },
+    {"date":"星期六, 十一月 26号","opp":"波兰 vs 沙特阿拉伯", time:"5:00 AM", "channel":740, },
+    {"date":"星期六, 十一月 26号","opp":"法国 vs 丹麦", time:"8:00 AM",  "channel":740, },
+    {"date":"星期六, 十一月 26号","opp":"阿根廷 vs 墨西哥", time:"11:00 AM", "channel":740, },
+
+    {"date":"星期日, 十一月 27号","opp":"日本 vs 哥斯达黎加",time:"2:00 AM", "channel":740,},
+    {"date":"星期日, 十一月 27号","opp":"比利时 vs 摩洛哥", time:"5:00 AM", "channel":740,},
+    {"date":"星期日, 十一月 27号","opp":"克罗地亚 vs 加拿大", time:"8:00 AM",  "channel":740,},
+    {"date":"星期日, 十一月 27号","opp":"西班牙 vs 德国", time:"11:00 AM", "channel":740,},
+
+    {"date":"星期一, 十一月 28号","opp":"喀麦隆 vs. 塞尔维亚",time:"2:00 AM", "channel":740,},
+    {"date":"星期一, 十一月 28号","opp":"韩国 vs 阵加纳","channel":740, time:"5:00 AM", },
+    {"date":"星期一, 十一月 28号","opp":"巴西 vs 瑞士", time:"8:00 AM", "channel":711,},
+    {"date":"星期一, 十一月 28号","opp":"葡萄牙 vs 乌拉圭", time:"11:00 AM",  "channel":711,},
+
+
+    {"date":"星期二, 十一月 29号","opp":"荷兰 vs 卡塔尔",time:"7:00 AM", "channel":740,},
+    {"date":"星期二, 十一月 29号","opp":"厄瓜多尔 vs 塞内加尔",time:"7:00 AM","channel":711,},
+    {"date":"星期二, 十一月 29号","opp":"威尔士 vs 英格兰", time:"11:00 AM",  "channel":711,},
+    {"date":"星期二, 十一月 29号","opp":"伊朗 vs 美国", time:"11:00 AM", "channel":740,},
+
+    {"date":"星期三, 十一月 30号","opp":"突尼斯vs法国", time: "7:00 AM",  "channel":711,},
+    {"date":"星期三, 十一月 30号","opp":"澳大利亚 vs 阵丹麦", time: "7:00 AM",  "channel":740,},
+    {"date":"星期三, 十一月 30号","opp":"波兰 vs 阿根廷", time:"11:00 AM", channel: 711},
+    {"date":"星期三, 十一月 30号","opp":"沙特阿拉伯 vs 墨西哥", time:"11:00 AM", "channel":740,},
+
+    {"date":"星期四, 十二月 1号","opp":"克罗地亚 vs 比利时", time: "7:00 AM",channel: 711},
+    {"date":"星期四, 十二月 1号","opp":"加拿大 vs 摩洛哥", time: "7:00 AM",  "channel":740,},
+    {"date":"星期四, 十二月 1号","opp":"日本 vs 西班牙", time:"11:00 AM", "channel":740,},
+    {"date":"星期四, 十二月 1号","opp":"哥斯达黎加 vs 德国", time:"11:00 AM", channel: 711},
+
+    {"date":"星期五, 十二月 2号","opp":"韩国 vs. 葡萄牙", time: "7:00 AM",  channel: 740},
+    {"date":"星期五, 十二月 2号","opp":"加纳 vs 乌拉圭", time: "7:00 AM", "channel":711,},
+    {"date":"星期五, 十二月 2号","opp":"喀麦隆 vs 巴西", time:"11:00 AM",  "channel":711,},
+    {"date":"星期五, 十二月 2号","opp":"塞尔维亚 vs 瑞士", time:"11:00 AM", channel: 740},
+
+     {"date":"星期六, 十二月 3号","opp":"A 组获胜者 vs  B 组亚军", time: "7:00 AM", "channel":711},
+    {"date":"星期六, 十二月 3号","opp":"C组冠军 vs D组亚军", time:"11:00 AM","channel":711,},
+
+    {"date":"星期日, 十二月 4号","opp":"D 组冠军 vs  C 组亚军", time: "7:00 AM","channel":740,},
+    {"date":"星期日, 十二月 4号","opp":"B 组冠军 vs  A 组亚军", time:"11:00 AM", "channel":740,},
+
+    {"date":"星期一, 十二月 5号","opp":"E 组冠军 vs  F 组亚军", time: "7:00 AM", "channel":711,},
+    {"date":"星期一, 十二月 5号","opp":"G 组冠军 vs  H 组亚军", time:"11:00 AM",  "channel":711,},
+
+
+    {"date":"星期二, 十二月 6号","opp":"F 组冠军 vs  E 组亚军", time: "7:00 AM", "channel":711,},
+    {"date":"星期二, 十二月 6号","opp":"H 组冠军 vs  G 组亚军", time:"11:00 AM",  "channel":711,},
+
+
+    {"date":"星期五, 十二月 9号","opp":"四分之一决赛 1", time: "7:00 AM",  "channel":711,},
+    {"date":"星期五, 十二月 9号","opp":"四分之一决赛 2", time:"11:00 AM",  "channel":711,},
+
+
+    {"date":"星期六, 十二月 10号","opp":"四分之一决赛 3", time: "7:00 AM", "channel":711,},
+    {"date":"星期六, 十二月 10号","opp":"四分之一决赛 4",  time:"11:00 AM",  "channel":711,},
+
+
+
+    {"date":"星期二, 十二月 13号","opp":"半决赛 1",  time:"11:00 AM",  "channel":711,},
+
+    {"date":"星期三, 十二月 14号","opp":"半决赛2", time:"11:00 AM","channel":711,},
+
+
+    {"date":"星期六, 十二月 17号","opp":"半决赛 1 负者 vs 半决赛 2 负者", time: "7:00 AM", "channel":711,},
+
+
+    {"date":"星期日, 十二月 18号","opp":"半决赛 1 胜者 vs 半决赛 2 胜者", time: "7:00 AM", "channel":711,},
+  ];
 
   var dupe = {};
   a = a.filter(function(m) { 
@@ -147,6 +264,19 @@
     document.body.style.overflow = isVisible ? 'hidden' : 'visible';
     window.scrollTo(0, 0);
   });
+
+  document.getElementById('cup').addEventListener('click', function() {
+    var el = document.getElementById('cupTable');
+    var display = el.style.display;
+    var isVisible = display === 'table';
+    el.style.display = isVisible ? 'none' : 'table';
+    document.body.style.overflow = isVisible ? 'hidden' : 'visible';
+    window.scrollTo(0, 0);
+  });
+
+  document.getElementById('worldcup').innerHTML = w.map(function(m) {
+    return '<tr><td>' + m.date + '</td><td>' + m.time + '</td><td>' + m.channel + '</td><td>' + m.opp + '</td></tr>';
+  }).join('');
 
   if (month === 4 && date === 9) {
     const intervalFn = function() {
