--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-   [{"date":"星期二, 四月 11号","opp":"亞特蘭大老鷹 vs 迈阿密热火","time":"4:30 PM","channel":752,"sorter":40027,"ee":"April 11"},{"date":"星期二, 四月 11号","opp":"明尼苏达森林狼 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":40030,"ee":"April 11"},{"date":"星期三, 四月 12号","opp":"芝加哥公牛 vs 多伦多猛龙","time":"4:00 PM","channel":735,"sorter":40028,"ee":"April 12"},{"date":"星期三, 四月 12号","opp":"俄克拉何马城雷霆 vs 新奥尔良鹈鹕","time":"6:30 PM","channel":735,"sorter":40030,"ee":"April 12"}]
+   [{"date":"星期五, 四月 14号","opp":"芝加哥公牛 vs 迈阿密热火","time":"4:00 PM","channel":752,"sorter":40030,"ee":"April 14"},{"date":"星期五, 四月 14号","opp":"俄克拉何马城雷霆 vs 明尼苏达森林狼","time":"6:30 PM","channel":735,"sorter":40032,"ee":"April 14"},{"date":"星期六, 四月 15号","opp":"布鲁克林篮网 vs 费城76人","time":"10:00 AM","channel":735,"sorter":40025,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"亞特蘭大老鷹 vs 波士顿凯尔特人","time":"12:30 PM","channel":735,"sorter":40039,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"纽约尼克斯 vs 克里夫蘭騎士","time":"3:00 PM","channel":735,"sorter":40030,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"金州勇士 vs 沙加緬度國王","time":"5:30 PM","channel":707,"sorter":40032,"ee":"April 15"}]
   `);
 
 
