--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     font-family: "Noto Sans SC";
     font-weight: 600;
     font-size: 1.7rem;
-    overflow: hidden;
   }
   img {
     margin: 20px 0;
@@ -39,6 +38,9 @@
     border: 1px solid #ccc;
     border-collapse: collapse;
   }
+  #toggle {
+    display: none;
+  }
   #laterTable {
     display: none;
 
@@ -57,17 +59,233 @@
   #card {
     margin-bottom: 31px;
   }
+  .pyro > .before, .pyro > .after {
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  box-shadow: 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff, 0 0 #fff;
+  -moz-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -webkit-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -o-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  -ms-animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+  animation: 1s bang ease-out infinite backwards, 1s gravity ease-in infinite backwards, 5s position linear infinite backwards;
+}
+
+.pyro > .after {
+  -moz-animation-delay: 1.25s, 1.25s, 1.25s;
+  -webkit-animation-delay: 1.25s, 1.25s, 1.25s;
+  -o-animation-delay: 1.25s, 1.25s, 1.25s;
+  -ms-animation-delay: 1.25s, 1.25s, 1.25s;
+  animation-delay: 1.25s, 1.25s, 1.25s;
+  -moz-animation-duration: 1.25s, 1.25s, 6.25s;
+  -webkit-animation-duration: 1.25s, 1.25s, 6.25s;
+  -o-animation-duration: 1.25s, 1.25s, 6.25s;
+  -ms-animation-duration: 1.25s, 1.25s, 6.25s;
+  animation-duration: 1.25s, 1.25s, 6.25s;
+}
+
+@-webkit-keyframes bang {
+  to {
+    box-shadow: 62px -78.6666666667px #ff00b3, 37px 6.3333333333px #0051ff, -200px -313.6666666667px #4400ff, 9px -155.6666666667px aqua, -161px -357.6666666667px #006aff, 158px 47.3333333333px #002bff, 113px -320.6666666667px #d000ff, -245px -374.6666666667px #00ff55, -245px -383.6666666667px #ff5900, -222px -143.6666666667px #004dff, -57px 63.3333333333px #0015ff, -73px -254.6666666667px #00fff2, 144px -296.6666666667px #0077ff, -236px -122.6666666667px #ff0048, -224px 31.3333333333px #00ff1e, -3px -233.6666666667px #ff7b00, -218px -12.6666666667px #ff00f2, -240px 54.3333333333px #bfff00, 118px 20.3333333333px #ff002f, -177px -10.6666666667px #ffe600, -73px -396.6666666667px #ffe600, -33px -68.6666666667px #0004ff, 187px -249.6666666667px #ff0037, 119px -33.6666666667px #5100ff, -104px 55.3333333333px #00ff73, -211px -72.6666666667px #ff6600, -165px -13.6666666667px #ff5900, -146px -70.6666666667px #00e1ff, 190px 16.3333333333px #ff0015, -95px -41.6666666667px #fff700, -31px -41.6666666667px lime, -120px -308.6666666667px #ff00cc, 62px -148.6666666667px #ff1100, -28px -355.6666666667px #00ff26, 247px -274.6666666667px #ff0d00, -92px -120.6666666667px #3c00ff, -14px 47.3333333333px #ffae00, -116px 20.3333333333px #00ff5e, 38px 58.3333333333px #f700ff, -21px -258.6666666667px #0099ff, -86px -135.6666666667px #ff0055, 98px 64.3333333333px #00ffb7, 201px -376.6666666667px #0037ff, -175px -256.6666666667px #ff1e00, -120px -272.6666666667px #00fff7, -89px 2.3333333333px #ff00c8, -244px -224.6666666667px #c800ff, 10px -223.6666666667px #ff0095, -109px -372.6666666667px #ff0037, -106px -296.6666666667px blue, -130px 28.3333333333px #5500ff;
+  }
+}
+@-moz-keyframes bang {
+  to {
+    box-shadow: 62px -78.6666666667px #ff00b3, 37px 6.3333333333px #0051ff, -200px -313.6666666667px #4400ff, 9px -155.6666666667px aqua, -161px -357.6666666667px #006aff, 158px 47.3333333333px #002bff, 113px -320.6666666667px #d000ff, -245px -374.6666666667px #00ff55, -245px -383.6666666667px #ff5900, -222px -143.6666666667px #004dff, -57px 63.3333333333px #0015ff, -73px -254.6666666667px #00fff2, 144px -296.6666666667px #0077ff, -236px -122.6666666667px #ff0048, -224px 31.3333333333px #00ff1e, -3px -233.6666666667px #ff7b00, -218px -12.6666666667px #ff00f2, -240px 54.3333333333px #bfff00, 118px 20.3333333333px #ff002f, -177px -10.6666666667px #ffe600, -73px -396.6666666667px #ffe600, -33px -68.6666666667px #0004ff, 187px -249.6666666667px #ff0037, 119px -33.6666666667px #5100ff, -104px 55.3333333333px #00ff73, -211px -72.6666666667px #ff6600, -165px -13.6666666667px #ff5900, -146px -70.6666666667px #00e1ff, 190px 16.3333333333px #ff0015, -95px -41.6666666667px #fff700, -31px -41.6666666667px lime, -120px -308.6666666667px #ff00cc, 62px -148.6666666667px #ff1100, -28px -355.6666666667px #00ff26, 247px -274.6666666667px #ff0d00, -92px -120.6666666667px #3c00ff, -14px 47.3333333333px #ffae00, -116px 20.3333333333px #00ff5e, 38px 58.3333333333px #f700ff, -21px -258.6666666667px #0099ff, -86px -135.6666666667px #ff0055, 98px 64.3333333333px #00ffb7, 201px -376.6666666667px #0037ff, -175px -256.6666666667px #ff1e00, -120px -272.6666666667px #00fff7, -89px 2.3333333333px #ff00c8, -244px -224.6666666667px #c800ff, 10px -223.6666666667px #ff0095, -109px -372.6666666667px #ff0037, -106px -296.6666666667px blue, -130px 28.3333333333px #5500ff;
+  }
+}
+@-o-keyframes bang {
+  to {
+    box-shadow: 62px -78.6666666667px #ff00b3, 37px 6.3333333333px #0051ff, -200px -313.6666666667px #4400ff, 9px -155.6666666667px aqua, -161px -357.6666666667px #006aff, 158px 47.3333333333px #002bff, 113px -320.6666666667px #d000ff, -245px -374.6666666667px #00ff55, -245px -383.6666666667px #ff5900, -222px -143.6666666667px #004dff, -57px 63.3333333333px #0015ff, -73px -254.6666666667px #00fff2, 144px -296.6666666667px #0077ff, -236px -122.6666666667px #ff0048, -224px 31.3333333333px #00ff1e, -3px -233.6666666667px #ff7b00, -218px -12.6666666667px #ff00f2, -240px 54.3333333333px #bfff00, 118px 20.3333333333px #ff002f, -177px -10.6666666667px #ffe600, -73px -396.6666666667px #ffe600, -33px -68.6666666667px #0004ff, 187px -249.6666666667px #ff0037, 119px -33.6666666667px #5100ff, -104px 55.3333333333px #00ff73, -211px -72.6666666667px #ff6600, -165px -13.6666666667px #ff5900, -146px -70.6666666667px #00e1ff, 190px 16.3333333333px #ff0015, -95px -41.6666666667px #fff700, -31px -41.6666666667px lime, -120px -308.6666666667px #ff00cc, 62px -148.6666666667px #ff1100, -28px -355.6666666667px #00ff26, 247px -274.6666666667px #ff0d00, -92px -120.6666666667px #3c00ff, -14px 47.3333333333px #ffae00, -116px 20.3333333333px #00ff5e, 38px 58.3333333333px #f700ff, -21px -258.6666666667px #0099ff, -86px -135.6666666667px #ff0055, 98px 64.3333333333px #00ffb7, 201px -376.6666666667px #0037ff, -175px -256.6666666667px #ff1e00, -120px -272.6666666667px #00fff7, -89px 2.3333333333px #ff00c8, -244px -224.6666666667px #c800ff, 10px -223.6666666667px #ff0095, -109px -372.6666666667px #ff0037, -106px -296.6666666667px blue, -130px 28.3333333333px #5500ff;
+  }
+}
+@-ms-keyframes bang {
+  to {
+    box-shadow: 62px -78.6666666667px #ff00b3, 37px 6.3333333333px #0051ff, -200px -313.6666666667px #4400ff, 9px -155.6666666667px aqua, -161px -357.6666666667px #006aff, 158px 47.3333333333px #002bff, 113px -320.6666666667px #d000ff, -245px -374.6666666667px #00ff55, -245px -383.6666666667px #ff5900, -222px -143.6666666667px #004dff, -57px 63.3333333333px #0015ff, -73px -254.6666666667px #00fff2, 144px -296.6666666667px #0077ff, -236px -122.6666666667px #ff0048, -224px 31.3333333333px #00ff1e, -3px -233.6666666667px #ff7b00, -218px -12.6666666667px #ff00f2, -240px 54.3333333333px #bfff00, 118px 20.3333333333px #ff002f, -177px -10.6666666667px #ffe600, -73px -396.6666666667px #ffe600, -33px -68.6666666667px #0004ff, 187px -249.6666666667px #ff0037, 119px -33.6666666667px #5100ff, -104px 55.3333333333px #00ff73, -211px -72.6666666667px #ff6600, -165px -13.6666666667px #ff5900, -146px -70.6666666667px #00e1ff, 190px 16.3333333333px #ff0015, -95px -41.6666666667px #fff700, -31px -41.6666666667px lime, -120px -308.6666666667px #ff00cc, 62px -148.6666666667px #ff1100, -28px -355.6666666667px #00ff26, 247px -274.6666666667px #ff0d00, -92px -120.6666666667px #3c00ff, -14px 47.3333333333px #ffae00, -116px 20.3333333333px #00ff5e, 38px 58.3333333333px #f700ff, -21px -258.6666666667px #0099ff, -86px -135.6666666667px #ff0055, 98px 64.3333333333px #00ffb7, 201px -376.6666666667px #0037ff, -175px -256.6666666667px #ff1e00, -120px -272.6666666667px #00fff7, -89px 2.3333333333px #ff00c8, -244px -224.6666666667px #c800ff, 10px -223.6666666667px #ff0095, -109px -372.6666666667px #ff0037, -106px -296.6666666667px blue, -130px 28.3333333333px #5500ff;
+  }
+}
+@keyframes bang {
+  to {
+    box-shadow: 62px -78.6666666667px #ff00b3, 37px 6.3333333333px #0051ff, -200px -313.6666666667px #4400ff, 9px -155.6666666667px aqua, -161px -357.6666666667px #006aff, 158px 47.3333333333px #002bff, 113px -320.6666666667px #d000ff, -245px -374.6666666667px #00ff55, -245px -383.6666666667px #ff5900, -222px -143.6666666667px #004dff, -57px 63.3333333333px #0015ff, -73px -254.6666666667px #00fff2, 144px -296.6666666667px #0077ff, -236px -122.6666666667px #ff0048, -224px 31.3333333333px #00ff1e, -3px -233.6666666667px #ff7b00, -218px -12.6666666667px #ff00f2, -240px 54.3333333333px #bfff00, 118px 20.3333333333px #ff002f, -177px -10.6666666667px #ffe600, -73px -396.6666666667px #ffe600, -33px -68.6666666667px #0004ff, 187px -249.6666666667px #ff0037, 119px -33.6666666667px #5100ff, -104px 55.3333333333px #00ff73, -211px -72.6666666667px #ff6600, -165px -13.6666666667px #ff5900, -146px -70.6666666667px #00e1ff, 190px 16.3333333333px #ff0015, -95px -41.6666666667px #fff700, -31px -41.6666666667px lime, -120px -308.6666666667px #ff00cc, 62px -148.6666666667px #ff1100, -28px -355.6666666667px #00ff26, 247px -274.6666666667px #ff0d00, -92px -120.6666666667px #3c00ff, -14px 47.3333333333px #ffae00, -116px 20.3333333333px #00ff5e, 38px 58.3333333333px #f700ff, -21px -258.6666666667px #0099ff, -86px -135.6666666667px #ff0055, 98px 64.3333333333px #00ffb7, 201px -376.6666666667px #0037ff, -175px -256.6666666667px #ff1e00, -120px -272.6666666667px #00fff7, -89px 2.3333333333px #ff00c8, -244px -224.6666666667px #c800ff, 10px -223.6666666667px #ff0095, -109px -372.6666666667px #ff0037, -106px -296.6666666667px blue, -130px 28.3333333333px #5500ff;
+  }
+}
+@-webkit-keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    -o-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+@-moz-keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    -o-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+@-o-keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    -o-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+@-ms-keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    -o-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+@keyframes gravity {
+  to {
+    transform: translateY(200px);
+    -moz-transform: translateY(200px);
+    -webkit-transform: translateY(200px);
+    -o-transform: translateY(200px);
+    -ms-transform: translateY(200px);
+    opacity: 0;
+  }
+}
+@-webkit-keyframes position {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+  40%, 59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+  60%, 79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
+@-moz-keyframes position {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+  40%, 59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+  60%, 79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
+@-o-keyframes position {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+  40%, 59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+  60%, 79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
+@-ms-keyframes position {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+  40%, 59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+  60%, 79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
+@keyframes position {
+  0%, 19.9% {
+    margin-top: 10%;
+    margin-left: 40%;
+  }
+  20%, 39.9% {
+    margin-top: 40%;
+    margin-left: 30%;
+  }
+  40%, 59.9% {
+    margin-top: 20%;
+    margin-left: 70%;
+  }
+  60%, 79.9% {
+    margin-top: 30%;
+    margin-left: 20%;
+  }
+  80%, 99.9% {
+    margin-top: 30%;
+    margin-left: 80%;
+  }
+}
 </style>
 </head>
 <body>
   <div id="content">
     <div id="title">陳家庭 NBA日程表</div>
     <div id="date"></div>
-    <img src="mothers-day.jpg" width="300" id="mom" />
+    <div class="pyro">
+      <div class="before"></div>
+      <div class="after"></div>
+    </div>
+    <img src="mom.png" />
+    
     <img src="day.gif" width="300" id="card" />
     <div id="noMatches">(今天沒有籃球比賽)</div>
     <table id="todayTable">
-      <thead><tr><th>時間</th><th>電台</th><th>團隊</th></tr></thead>
+      <thead><tr><th>日期</th><th>時間</th><th>電台</th><th>團隊</th></tr></thead>
       <tbody id="matches"></tbody>
     </table>
     <div id="toggle">完整时间表</div>
@@ -79,7 +297,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-   [{"date":"星期五, 四月 14号","opp":"芝加哥公牛 vs 迈阿密热火","time":"4:00 PM","channel":752,"sorter":40030,"ee":"April 14"},{"date":"星期五, 四月 14号","opp":"俄克拉何马城雷霆 vs 明尼苏达森林狼","time":"6:30 PM","channel":735,"sorter":40032,"ee":"April 14"},{"date":"星期六, 四月 15号","opp":"布鲁克林篮网 vs 费城76人","time":"10:00 AM","channel":735,"sorter":40025,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"亞特蘭大老鷹 vs 波士顿凯尔特人","time":"12:30 PM","channel":735,"sorter":40039,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"纽约尼克斯 vs 克里夫蘭騎士","time":"3:00 PM","channel":735,"sorter":40030,"ee":"April 15"},{"date":"星期六, 四月 15号","opp":"金州勇士 vs 沙加緬度國王","time":"5:30 PM","channel":707,"sorter":40032,"ee":"April 15"}]
+  [{"date":"星期一, 四月 24号","opp":"密尔沃基雄鹿 vs 迈阿密热火","time":"4:30 PM","channel":752,"sorter":40040,"ee":"April 24"},{"date":"星期一, 四月 24号","opp":"孟菲斯灰熊 vs 洛杉矶湖人","time":"7:00 PM","channel":752,"sorter":40043,"ee":"April 24"},{"date":"星期二, 四月 25号","opp":"亞特蘭大老鷹 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":40041,"ee":"April 25"},{"date":"星期二, 四月 25号","opp":"洛杉矶快船 vs 菲尼克斯太阳","time":"7:00 PM","channel":752,"sorter":40044,"ee":"April 25"},{"date":"星期三, 四月 26号","opp":"洛杉矶湖人 vs 孟菲斯灰熊","time":"4:30 PM","channel":752,"sorter":40042,"ee":"April 26"},{"date":"星期三, 四月 26号","opp":"金州勇士 vs 沙加緬度國王","time":"7:00 PM","channel":752,"sorter":40045,"ee":"April 26"}]
   `);
 
 
@@ -97,9 +315,12 @@
   var day = obj.getDay();
   var month = obj.getMonth();
 
-  var getTodays = function(m) { return m.ee.getDate() === date && m.ee.getMonth() === month };
-  var today = all.filter(getTodays);
-  var notToday = all.filter(function(m) { return !getTodays(m) && obj < m.ee; });
+  // var getTodays = function(m) { return m.ee.getDate() === date && m.ee.getMonth() === month };
+  // var today = all.filter(getTodays);
+  // var notToday = all.filter(function(m) { return !getTodays(m) && obj < m.ee; });
+
+  var today = all.filter(function(m) { return m.ee.getDate() >= date || m.ee.getMonth() > month });
+  var notToday = [];
 
   var days = [
     '星期日',
@@ -128,7 +349,7 @@
 
   document.getElementById('date').innerHTML = days[day] + ', ' + months[month] + ' ' + date + '号';
   document.getElementById('matches').innerHTML = today.map(function(m) {
-    return '<tr><td>' + m.time + '</td><td>' + m.channel + '</td><td>' + m.opp + '</td></tr>';
+    return '<tr><td>' + m.date + '</td><td>' + m.time + '</td><td>' + m.channel + '</td><td>' + m.opp + '</td></tr>';
   }).join('');
   document.getElementById('later').innerHTML = notToday.map(function(m) {
     return '<tr><td>' + m.date + '</td><td>' + m.opp + '</td></tr>';
@@ -148,27 +369,6 @@
     document.body.style.overflow = isVisible ? 'hidden' : 'visible';
     window.scrollTo(0, 0);
   });
-
-  if (month === 4 && date === 9) {
-    const intervalFn = function() {
-      var mom = document.getElementById('mom');
-      var card = document.getElementById('card');
-      var timer;
-      if (mom.style.display === 'none') {
-        mom.style.display = 'inline-block';
-        card.style.display = 'none';
-        timer = 16000;
-      } else {
-        mom.style.display = 'none';
-        card.style.display = 'inline-block';
-        timer = 4000;
-      }
-
-      setTimeout(intervalFn, timer);
-    };
-
-    intervalFn();
-  }
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZHJNVSR58"></script>
