--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-  [{"date":"星期四, 四月 27号","opp":"波士顿凯尔特人 vs 亞特蘭大老鷹","time":"5:30 PM","channel":752,"sorter":40044,"ee":"April 27"},{"date":"星期五, 四月 28号","opp":"沙加緬度國王 vs 金州勇士","time":"5:00 PM","channel":735,"sorter":40045,"ee":"April 28"},{"date":"星期五, 四月 28号","opp":"孟菲斯灰熊 vs 洛杉矶湖人","time":"7:30 PM","channel":735,"sorter":40047,"ee":"April 28"},{"date":"星期六, 四月 29号","opp":"亞特蘭大老鷹 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":40045,"ee":"April 29"}]
+  [{"date":"星期六, 四月 29号","opp":"菲尼克斯太阳 vs 丹佛掘金","time":"5:30 PM","channel":752,"sorter":40046,"ee":"April 29"},{"date":"星期日, 四月 30号","opp":"迈阿密热火 vs 纽约尼克斯","time":"10:00 AM","channel":707,"sorter":40040,"ee":"April 30"},{"date":"星期日, 四月 30号","opp":"金州勇士 vs 沙加緬度國王","time":"12:30 PM","channel":707,"sorter":40054,"ee":"April 30"},{"date":"星期一, 五月 1号","opp":"费城76人 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":50017,"ee":"May 1"},{"date":"星期一, 五月 1号","opp":"菲尼克斯太阳 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":50020,"ee":"May 1"}]
   `);
 
 
