--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </body>
 <script>
   var a = JSON.parse(`
-  [{"date":"星期二, 五月 9号","opp":"费城76人 vs 波士顿凯尔特人","time":"4:30 PM","channel":752,"sorter":50025,"ee":"May 9"},{"date":"星期二, 五月 9号","opp":"菲尼克斯太阳 vs 丹佛掘金","time":"7:00 PM","channel":752,"sorter":50028,"ee":"May 9"},{"date":"星期三, 五月 10号","opp":"迈阿密热火 vs 纽约尼克斯","time":"4:30 PM","channel":752,"sorter":50026,"ee":"May 10"},{"date":"星期三, 五月 10号","opp":"洛杉矶湖人 vs 金州勇士","time":"7:00 PM","channel":752,"sorter":50029,"ee":"May 10"},{"date":"星期四, 五月 11号","opp":"波士顿凯尔特人 vs 费城76人","time":"4:30 PM","channel":735,"sorter":50027,"ee":"May 11"},{"date":"星期四, 五月 11号","opp":"丹佛掘金 vs 菲尼克斯太阳","time":"7:00 PM","channel":735,"sorter":50030,"ee":"May 11"}]
+  [{"date":"星期五, 五月 12号","opp":"纽约尼克斯 vs 迈阿密热火","time":"4:30 PM","channel":735,"sorter":50028,"ee":"May 12"},{"date":"星期五, 五月 12号","opp":"金州勇士 vs 洛杉矶湖人","time":"7:00 PM","channel":735,"sorter":50031,"ee":"May 12"},{"date":"星期日, 五月 14号","opp":"费城76人 vs 波士顿凯尔特人","time":"TBD","channel":735,"sorter":50030,"ee":"May 14"}]
   `);
 
 
